## Process this file with automake to produce Makefile.in

pkgdatadir = $(datadir)/@PACKAGE@/RipStop/menubar

pixmapdir = $(datadir)/pixmaps

dist_pkgdata_DATA = \
	about.png \
	downloading.png \
	progressbar.png \
	schedule.png \
	completed.png \
	error.png \
	new.png \
	properties.png \
	startall.png \
	copydata.png \
	find.png \
	options.png \
	quit.png \
	start.png \
	copyurl.png \
	graph.png \
	pasteurl.png \
	remove.png \
	stopall.png \
	details.png \
	help.png \
	pause.png \
	scheduled.png \
	stop.png
