## Process this file with automake to produce Makefile.in

pkgdatadir = $(datadir)/@PACKAGE@/RipStop/toolbar

dist_pkgdata_DATA = \
	download_new.png \
	download_stop_all.png \
	download_info.png \
	download_remove.png \
	download_stop.png \
	download_move_down.png \
	download_start_all.png \
	download_move_up.png \
	download_start.png \
	download_schedule.png
