## Process this file with automake to produce Makefile.in

pkgdatadir = $(datadir)/@PACKAGE@/xpm/small

dist_pkgdata_DATA = \
	error.xpm \
	ok.xpm \
	queue.xpm \
	start.xpm \
	exit.xpm \
	options.xpm \
	remove.xpm \
	stopall.xpm \
	graph.xpm \
	paste.xpm \
	resume.xpm \
	stop.xpm \
	new.xpm \
	progress.xpm \
	schedule.xpm \
	wxdfast.xpm \
	noresume.xpm \
	properties.xpm \
	startall.xpm
